# PrayU-chatbot-api

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
scripts/: build.sh
